# dotagents

./: .gitmodules  Cargo.toml
.github/workflows/: ci.yml
crates/agentz/: Cargo.toml
crates/agentz-cli/: Cargo.toml
crates/agentz-cli/src/: main.rs
crates/agentz-core/: Cargo.toml
crates/agentz-core/src/: compile.rs  config.rs  dialect.rs  dialects.rs  diff.rs  id.rs  lib.rs  model.rs  parser.rs  plan.rs  plugins.rs  render.rs  repo.rs  schema.rs  tree.rs  vocabulary.rs  workstream.rs
crates/agentz-core/tests/: hooks_and_ignore.rs  plan_dag.rs  round_trip.rs  tree_compile.rs
crates/agentz-core/tests/fixtures/: claude_skill.md  cursor_always_apply.mdc  cursor_globs.mdc
crates/agentz/examples/: demo.rs  migrate.rs
crates/agentz/src/: acp.rs  apply.rs  config.rs  env.rs  lib.rs
crates/agentz/src/ingest/: claude.rs  mod.rs
crates/agentz/src/mcp/: handler.rs  mod.rs  tools.rs
crates/agentz/src/zenoh_bus/: duplex.rs  mod.rs  session.rs
crates/agentz/tests/: compile_and_apply.rs  ingest_claude.rs  mcp_over_zenoh.rs  mcp_server.rs
src/: config.rs  install.rs  lib.rs  model.rs  plugins.rs  schema.rs  vocabulary.rs
src/domain/: mod.rs  paths.rs
src/install/: apply.rs  bootstrap.rs  error.rs  mod.rs  orchestrate.rs  policy.rs  types.rs  workspace.rs
src/install/plan/: claude.rs  codex.rs  cursor.rs  mod.rs  opencode.rs  skills.rs
tests/: install_links.rs  plugin_schemas.rs  vocabulary.rs
