[package]
name = "agents_unified"
version = "0.1.0"
edition = "2021"
description = "Rust library: unified ~/.agents layout, agent-specific installs (links), and plugin hooks — aligned with dot-agents."
license = "MIT"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
pathdiff = "0.2"

[dev-dependencies]
# Newer tempfile pulls getrandom 0.4 which requires a newer toolchain.
tempfile = "=3.10.1"
