[workspace]
resolver = "2"
members = [
    "crates/agentz-core",
    "crates/agentz",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
schemars = { version = "1", features = ["chrono04", "uuid1"] }
jsonschema = { version = "0.30", default-features = false }
pathdiff = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "sync", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
rmcp = { version = "0.9", default-features = false }
zenoh = { version = "1", default-features = false, features = ["unstable", "internal"] }
agent-client-protocol = "0.10"
tempfile = "3"
uuid = { version = "1", features = ["serde", "v7"] }
