[package]
name = "agentz-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure-data domain model for agentz: AgentsTree AST, plan DAGs, schema.org vocabulary, and plugin schema types. No IO."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
schemars = { workspace = true }
jsonschema = { workspace = true }

[dev-dependencies]
